--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 
     <div id="p2" class="step">
         <h2>第一步：量化你的效用偏好</h2>
-        <p class="stat-label">请分配100点“在意分”。这些分数代表了你在挑选伴侣时各项指标的优先级。</p>
+        <p class="stat-label">请配制你的“在意分”。这些分数代表了你在挑选伴侣时各项指标的优先级。</p>
         <div class="card" id="weight-ui"></div>
         <button class="btn" onclick="go(3)">定义我的初始画像</button>
     </div>
